--- a/agents.ipynb
+++ b/agents.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,19 +193,427 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=a2a603dfc6e848cb8b43a1e13551ede7&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "Trace(request_id=a2a603dfc6e848cb8b43a1e13551ede7)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "react(claim=\"David Gregory was born in 1625.\").titles[:3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\u001b[34m[2025-03-12T18:38:23.559367]\u001b[0m\n",
+      "\n",
+      "\u001b[31mSystem message:\u001b[0m\n",
+      "\n",
+      "Your input fields are:\n",
+      "1. `claim` (str)\n",
+      "2. `trajectory` (str)\n",
+      "\n",
+      "Your output fields are:\n",
+      "1. `reasoning` (str)\n",
+      "2. `titles` (list[str])\n",
+      "\n",
+      "All interactions will be structured in the following way, with the appropriate values filled in.\n",
+      "\n",
+      "[[ ## claim ## ]]\n",
+      "{claim}\n",
+      "\n",
+      "[[ ## trajectory ## ]]\n",
+      "{trajectory}\n",
+      "\n",
+      "[[ ## reasoning ## ]]\n",
+      "{reasoning}\n",
+      "\n",
+      "[[ ## titles ## ]]\n",
+      "{titles}        # note: the value you produce must adhere to the JSON schema: {\"type\": \"array\", \"items\": {\"type\": \"string\"}}\n",
+      "\n",
+      "[[ ## completed ## ]]\n",
+      "\n",
+      "In adhering to this structure, your objective is: \n",
+      "        Find all Wikipedia titles relevant to verifying (or refuting) the claim.\n",
+      "\n",
+      "\n",
+      "\u001b[31mUser message:\u001b[0m\n",
+      "\n",
+      "[[ ## claim ## ]]\n",
+      "David Gregory was born in 1625.\n",
+      "\n",
+      "[[ ## trajectory ## ]]\n",
+      "[[ ## thought_0 ## ]]\n",
+      "Searching for information about David Gregory's birth.\n",
+      "\n",
+      "[[ ## tool_name_0 ## ]]\n",
+      "search_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_0 ## ]]\n",
+      "{\"query\": {\"type\": \"string\"}}\n",
+      "\n",
+      "[[ ## observation_0 ## ]]\n",
+      "Failed to execute: Arg query is invalid: {'type': 'string'} is not of type 'string'\n",
+      "\n",
+      "[[ ## thought_1 ## ]]\n",
+      "David Gregory was born in 1625. Consider which year is most likely to be correct.\n",
+      "\n",
+      "[[ ## tool_name_1 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_1 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_1 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_2 ## ]]\n",
+      "David Gregory was born in a likely year. We can try looking up the birth year of David Gregory on Wikipedia.\n",
+      "\n",
+      "[[ ## tool_name_2 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_2 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_2 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_3 ## ]]\n",
+      "David Gregory was born in a likely year. We can try looking up the birth year of David Gregory on Wikipedia.\n",
+      "\n",
+      "[[ ## tool_name_3 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_3 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_3 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_4 ## ]]\n",
+      "David Gregory was born in a likely year. We can try looking up the birth year of David Gregory on Wikipedia, and then try searching for the name \"David Gregory\" on Wikipedia to see if that yields any results.\n",
+      "\n",
+      "[[ ## tool_name_4 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_4 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_4 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_5 ## ]]\n",
+      "David Gregory was born in a likely year. We can try looking up the birth year of David Gregory on Wikipedia, and then try searching for the name \"David Gregory\" on Wikipedia to see if that yields any results.\n",
+      "\n",
+      "[[ ## tool_name_5 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_5 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_5 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_6 ## ]]\n",
+      "We can try searching for the name \"David Gregory\" on Wikipedia to see if that yields any results.\n",
+      "\n",
+      "[[ ## tool_name_6 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_6 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_6 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_7 ## ]]\n",
+      "We can try searching for the name \"David Gregory\" on Wikipedia to see if that yields any results.\n",
+      "\n",
+      "[[ ## tool_name_7 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_7 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_7 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_8 ## ]]\n",
+      "We're trying to find a Wikipedia title that verifies the claim that David Gregory was born in 1625.\n",
+      "\n",
+      "[[ ## tool_name_8 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_8 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_8 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_9 ## ]]\n",
+      "We're trying to find a Wikipedia title that verifies the claim that David Gregory was born in 1625.\n",
+      "\n",
+      "[[ ## tool_name_9 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_9 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_9 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_10 ## ]]\n",
+      "We're trying to find a Wikipedia title that verifies the claim that David Gregory was born in 1625.\n",
+      "\n",
+      "[[ ## tool_name_10 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_10 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_10 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_11 ## ]]\n",
+      "We're trying to find a Wikipedia title that verifies the claim that David Gregory was born in 1625.\n",
+      "\n",
+      "[[ ## tool_name_11 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_11 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_11 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_12 ## ]]\n",
+      "We're trying to find a Wikipedia title that verifies the claim that David Gregory was born in 1625.\n",
+      "\n",
+      "[[ ## tool_name_12 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_12 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_12 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_13 ## ]]\n",
+      "We're trying to find a Wikipedia title that verifies the claim that David Gregory was born in 1625.\n",
+      "\n",
+      "[[ ## tool_name_13 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_13 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_13 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_14 ## ]]\n",
+      "We're trying to find a Wikipedia title that verifies the claim that David Gregory was born in 1625.\n",
+      "\n",
+      "[[ ## tool_name_14 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_14 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_14 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_15 ## ]]\n",
+      "We're trying to find a Wikipedia title that verifies the claim that David Gregory was born in 1625.\n",
+      "\n",
+      "[[ ## tool_name_15 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_15 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_15 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_16 ## ]]\n",
+      "We're trying to find a Wikipedia title that verifies the claim that David Gregory was born in 1625.\n",
+      "\n",
+      "[[ ## tool_name_16 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_16 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_16 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_17 ## ]]\n",
+      "We're trying to find a Wikipedia title that verifies the claim that David Gregory was born in 1625. We can try looking up the birth year of David Gregory on Wikipedia.\n",
+      "\n",
+      "[[ ## tool_name_17 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_17 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_17 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_18 ## ]]\n",
+      "We can try looking up the birth year of David Gregory on Wikipedia.\n",
+      "\n",
+      "[[ ## tool_name_18 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_18 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_18 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "[[ ## thought_19 ## ]]\n",
+      "We're trying to find a Wikipedia title that verifies the claim that David Gregory was born in 1625. We can try looking up the birth year of David Gregory on Wikipedia.\n",
+      "\n",
+      "[[ ## tool_name_19 ## ]]\n",
+      "lookup_wikipedia\n",
+      "\n",
+      "[[ ## tool_args_19 ## ]]\n",
+      "{\"title\": \"David Gregory\"}\n",
+      "\n",
+      "[[ ## observation_19 ## ]]\n",
+      "No Wikipedia page found for title: David Gregory\n",
+      "\n",
+      "Respond with the corresponding output fields, starting with the field `[[ ## reasoning ## ]]`, then `[[ ## titles ## ]]` (must be formatted as a valid Python list[str]), and then ending with the marker for `[[ ## completed ## ]]`.\n",
+      "\n",
+      "\n",
+      "\u001b[31mResponse:\u001b[0m\n",
+      "\n",
+      "\u001b[32m[[ ## reasoning ## ]]\n",
+      "We were unable to find a Wikipedia title that verifies the claim that David Gregory was born in 1625.\n",
+      "\n",
+      "[[ ## titles ## ]]\n",
+      "[]\n",
+      "\n",
+      "[[ ## completed ## ]]\u001b[0m\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "dspy.inspect_history(n=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def top5_recall(example, pred, trace=None):\n",
+    "    gold_titles = example.titles\n",
+    "    recall = sum(x in pred.titles[:5] for x in gold_titles) / len(gold_titles)\n",
+    "\n",
+    "    # If we're \"bootstrapping\" for optimization, return True if and only if the recall is perfect.\n",
+    "    if trace is not None:\n",
+    "        return recall >= 1.0\n",
+    "    \n",
+    "    # If we're just doing inference, just measure the recall.\n",
+    "    return recall\n",
+    "\n",
+    "evaluate = dspy.Evaluate(devset=devset, metric=top5_recall, num_threads=16, display_progress=True, display_table=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Metric: 0.00 / 1 (0.0%):   1%|          | 1/100 [00:00<00:51,  1.91it/s]"
+     ]
+    }
+   ],
+   "source": [
+    "def safe_react(claim: str):\n",
+    "    try:\n",
+    "        return react(claim=claim)\n",
+    "    except Exception as e:\n",
+    "        return dspy.Prediction(titles=[])\n",
+    "\n",
+    "evaluate(safe_react)"
+   ]
   }
  ],
  "metadata": {
