--- a/agents.ipynb
+++ b/agents.ipynb
@@ -594,15 +594,232 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Metric: 0.00 / 1 (0.0%):   1%|          | 1/100 [00:00<00:51,  1.91it/s]"
+      "Average Metric: 25.00 / 100 (25.0%): 100%|██████████| 100/100 [04:23<00:00,  2.63s/it]"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025/03/12 18:43:58 INFO dspy.evaluate.evaluate: Average Metric: 24.99999999999999 / 100 (25.0%)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>claim</th>\n",
+       "      <th>example_titles</th>\n",
+       "      <th>trajectory</th>\n",
+       "      <th>reasoning</th>\n",
+       "      <th>pred_titles</th>\n",
+       "      <th>top5_recall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>The Church of England's movement that inspired the Trinity Episcop...</td>\n",
+       "      <td>[Oxford Movement, Trinity Episcopal Church (Houghton, Michigan), S...</td>\n",
+       "      <td>{'thought_0': \"The claim mentions the Church of England and the Tr...</td>\n",
+       "      <td>The claim mentions the Church of England and the Trinity Episcopal...</td>\n",
+       "      <td>['John Lettice', 'John Kettlewell', 'John Purchas', 'Joachim Lütke...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Red, White &amp; Crüe and this athlete both fight. The french fighter ...</td>\n",
+       "      <td>[Mike Tyson, Bobby Stewart, Red, White &amp;amp; Crüe]</td>\n",
+       "      <td>{'thought_0': 'The french fighter is likely Patrick Surtain', 'too...</td>\n",
+       "      <td>The reasoning is that the tool was unable to find reliable informa...</td>\n",
+       "      <td>['Billy Stewart', 'Jean-Patrick Lescarboura', 'Simon Patrick Stewa...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The writer/director/actor from Glen or Glenda and Fernand Rivers s...</td>\n",
+       "      <td>[Fernand Rivers, Ed Wood, Glen or Glenda]</td>\n",
+       "      <td>{'thought_0': 'The writer/director/actor from Glen or Glenda and F...</td>\n",
+       "      <td>The writer/director/actor from Glen or Glenda and Fernand Rivers i...</td>\n",
+       "      <td>['The Incredibly Strange Creatures Who Stopped Living and Became M...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>The film by Sandi Sissel was released before The End of Suburbia.</td>\n",
+       "      <td>[Sandi Sissel, Chicken Ranch (film), The End of Suburbia]</td>\n",
+       "      <td>{'thought_0': 'Search for the director of The End of Suburbia to s...</td>\n",
+       "      <td>The director of The End of Suburbia may have also directed the fil...</td>\n",
+       "      <td>['Sandi Sissel', 'Escape from Suburbia', 'Suburb (1951 film)', 'Su...</td>\n",
+       "      <td>✔️ [0.333]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>The actor who played captain hook in the live production with Tayl...</td>\n",
+       "      <td>[Taylor Louderman, Christopher Walken, Peter Pan Live!]</td>\n",
+       "      <td>{'thought_0': 'The actor who played captain hook in the live produ...</td>\n",
+       "      <td>The reasoning behind this response is that none of the provided to...</td>\n",
+       "      <td>['Cyril Ritchard', 'Captain James Hook', 'E. Holman Clark', 'Peter...</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                   claim  \\\n",
+       "0  The Church of England's movement that inspired the Trinity Episcop...   \n",
+       "1  Red, White & Crüe and this athlete both fight. The french fighter ...   \n",
+       "2  The writer/director/actor from Glen or Glenda and Fernand Rivers s...   \n",
+       "3      The film by Sandi Sissel was released before The End of Suburbia.   \n",
+       "4  The actor who played captain hook in the live production with Tayl...   \n",
+       "\n",
+       "                                                          example_titles  \\\n",
+       "0  [Oxford Movement, Trinity Episcopal Church (Houghton, Michigan), S...   \n",
+       "1                     [Mike Tyson, Bobby Stewart, Red, White &amp; Crüe]   \n",
+       "2                              [Fernand Rivers, Ed Wood, Glen or Glenda]   \n",
+       "3              [Sandi Sissel, Chicken Ranch (film), The End of Suburbia]   \n",
+       "4                [Taylor Louderman, Christopher Walken, Peter Pan Live!]   \n",
+       "\n",
+       "                                                              trajectory  \\\n",
+       "0  {'thought_0': \"The claim mentions the Church of England and the Tr...   \n",
+       "1  {'thought_0': 'The french fighter is likely Patrick Surtain', 'too...   \n",
+       "2  {'thought_0': 'The writer/director/actor from Glen or Glenda and F...   \n",
+       "3  {'thought_0': 'Search for the director of The End of Suburbia to s...   \n",
+       "4  {'thought_0': 'The actor who played captain hook in the live produ...   \n",
+       "\n",
+       "                                                               reasoning  \\\n",
+       "0  The claim mentions the Church of England and the Trinity Episcopal...   \n",
+       "1  The reasoning is that the tool was unable to find reliable informa...   \n",
+       "2  The writer/director/actor from Glen or Glenda and Fernand Rivers i...   \n",
+       "3  The director of The End of Suburbia may have also directed the fil...   \n",
+       "4  The reasoning behind this response is that none of the provided to...   \n",
+       "\n",
+       "                                                             pred_titles  \\\n",
+       "0  ['John Lettice', 'John Kettlewell', 'John Purchas', 'Joachim Lütke...   \n",
+       "1  ['Billy Stewart', 'Jean-Patrick Lescarboura', 'Simon Patrick Stewa...   \n",
+       "2  ['The Incredibly Strange Creatures Who Stopped Living and Became M...   \n",
+       "3  ['Sandi Sissel', 'Escape from Suburbia', 'Suburb (1951 film)', 'Su...   \n",
+       "4  ['Cyril Ritchard', 'Captain James Hook', 'E. Holman Clark', 'Peter...   \n",
+       "\n",
+       "  top5_recall  \n",
+       "0              \n",
+       "1              \n",
+       "2              \n",
+       "3  ✔️ [0.333]  \n",
+       "4              "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "                <div style='\n",
+       "                    text-align: center;\n",
+       "                    font-size: 16px;\n",
+       "                    font-weight: bold;\n",
+       "                    color: #555;\n",
+       "                    margin: 10px 0;'>\n",
+       "                    ... 95 more rows not displayed ...\n",
+       "                </div>\n",
+       "                "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "25.0"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div>\n",
+       "  <style scoped>\n",
+       "  button {\n",
+       "    border: none;\n",
+       "    border-radius: 4px;\n",
+       "    background-color: rgb(34, 114, 180);\n",
+       "    font-family: -apple-system, \"system-ui\", \"Segoe UI\", Roboto, \"Helvetica Neue\", Arial;\n",
+       "    font-size: 13px;\n",
+       "    color: white;\n",
+       "    margin-top: 8px;\n",
+       "    margin-bottom: 8px;\n",
+       "    padding: 8px 16px;\n",
+       "    cursor: pointer;\n",
+       "  }\n",
+       "  button:hover {\n",
+       "    background-color: rgb(66, 153, 224);\n",
+       "  }\n",
+       "  </style>\n",
+       "  <button\n",
+       "    onclick=\"\n",
+       "        const display = this.nextElementSibling.style.display;\n",
+       "        const isCollapsed = display === 'none';\n",
+       "        this.nextElementSibling.style.display = isCollapsed ? null : 'none';\n",
+       "\n",
+       "        const verb = isCollapsed ? 'Collapse' : 'Expand';\n",
+       "        this.innerText = `${verb} MLflow Trace`;\n",
+       "    \"\n",
+       "  >Collapse MLflow Trace</button>\n",
+       "  <iframe\n",
+       "    id=\"trace-renderer\"\n",
+       "    style=\"width: 100%; height: 500px; border: none; resize: vertical;\"\n",
+       "    src=\"http://localhost:5000/static-files/lib/notebook-trace-renderer/index.html?trace_id=875a9051f7e749f1ba7aaf8200dc1ac6&amp;experiment_id=374362034103955121&amp;trace_id=090ffb3a1a5b45108fb5aa1f07b1716d&amp;experiment_id=374362034103955121&amp;trace_id=91027bc83e214a169221ae7400cb04b9&amp;experiment_id=374362034103955121&amp;trace_id=be4ed3e01bc145deb3415efde21b19b2&amp;experiment_id=374362034103955121&amp;trace_id=74c2819f278844c1ac0d27ca45e7f14d&amp;experiment_id=374362034103955121&amp;trace_id=cc1665a7fcfc431ca5e358e59a90b3bc&amp;experiment_id=374362034103955121&amp;trace_id=a9443893823f4e51b39714f803cfcf2e&amp;experiment_id=374362034103955121&amp;trace_id=3a130543ee004d7daa6a77c5310a76ee&amp;experiment_id=374362034103955121&amp;trace_id=0c3a3ffebb394a90af54edf918e1df9b&amp;experiment_id=374362034103955121&amp;trace_id=5529cbd922d54eb7882406c5394966cc&amp;experiment_id=374362034103955121&amp;version=2.20.3\"\n",
+       "  />\n",
+       "</div>\n"
+      ],
+      "text/plain": [
+       "[Trace(request_id=875a9051f7e749f1ba7aaf8200dc1ac6), Trace(request_id=090ffb3a1a5b45108fb5aa1f07b1716d), Trace(request_id=91027bc83e214a169221ae7400cb04b9), Trace(request_id=be4ed3e01bc145deb3415efde21b19b2), Trace(request_id=74c2819f278844c1ac0d27ca45e7f14d), Trace(request_id=cc1665a7fcfc431ca5e358e59a90b3bc), Trace(request_id=a9443893823f4e51b39714f803cfcf2e), Trace(request_id=3a130543ee004d7daa6a77c5310a76ee), Trace(request_id=0c3a3ffebb394a90af54edf918e1df9b), Trace(request_id=5529cbd922d54eb7882406c5394966cc)]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -613,6 +830,15 @@
     "        return dspy.Prediction(titles=[])\n",
     "\n",
     "evaluate(safe_react)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dspy.inspect_history(n=1)"
    ]
   }
  ],
