--- a/agents.ipynb
+++ b/agents.ipynb
@@ -2121,6 +2121,15 @@
     "tp = dspy.MIPROv2(metric=top5_recall, auto=\"medium\", num_threads=16, **kwargs)\n",
     "optimized_react = tp.compile(react, trainset=trainset, max_bootstrapped_demos=3, max_labeled_demos=0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluate(optimized_react)"
+   ]
   }
  ],
  "metadata": {
