--- a/reasoning.ipynb
+++ b/reasoning.ipynb
@@ -45,6 +45,64 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading readme: 100%|██████████| 8.41k/8.41k [00:00<00:00, 39.2kB/s]\n",
+      "Downloading data: 100%|██████████| 505k/505k [00:00<00:00, 647kB/s]\n",
+      "Downloading data: 100%|██████████| 353k/353k [00:00<00:00, 547kB/s]\n",
+      "Generating train split: 100%|██████████| 1744/1744 [00:00<00:00, 243107.65 examples/s]\n",
+      "Generating test split: 100%|██████████| 1187/1187 [00:00<00:00, 414024.02 examples/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "350 350\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dspy.datasets import MATH\n",
+    "\n",
+    "dataset = MATH(subset='algebra')\n",
+    "print(len(dataset.train), len(dataset.dev))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question: The doctor has told Cal O'Ree that during his ten weeks of working out at the gym, he can expect each week's weight loss to be $1\\%$ of his weight at the end of the previous week. His weight at the beginning of the workouts is $244$ pounds. How many pounds does he expect to weigh at the end of the ten weeks? Express your answer to the nearest whole number.\n",
+      "Answer: 221\n"
+     ]
+    }
+   ],
+   "source": [
+    "example = dataset.train[0]\n",
+    "print(\"Question:\", example.question)\n",
+    "print(\"Answer:\", example.answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
