--- a/reasoning.ipynb
+++ b/reasoning.ipynb
@@ -558,6 +558,51 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "  7%|▋         | 5/70 [00:37<08:06,  7.48s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 4 full traces after 5 examples for up to 1 rounds, amounting to 5 attempts.\n",
+      "Bootstrapping set 4/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  6%|▌         | 4/70 [00:16<04:28,  4.07s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 4 full traces after 4 examples for up to 1 rounds, amounting to 4 attempts.\n",
+      "Bootstrapping set 5/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  6%|▌         | 4/70 [00:34<09:22,  8.53s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bootstrapped 3 full traces after 4 examples for up to 1 rounds, amounting to 4 attempts.\n",
+      "Bootstrapping set 6/19\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "  0%|          | 0/70 [00:00<?, ?it/s]"
      ]
     }
